--- a/7th Sea/7th Sea.css
+++ b/7th Sea/7th Sea.css
@@ -14,6 +14,8 @@
 .sheet-hidden {
     display:none;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Parisienne|Caveat&display=swap');
 /*============= TABS =============*/
 
 div.sheet-tab-content
@@ -52,7 +54,7 @@ input.sheet-tab::before
     
     background: #fff;
     color: black;
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     
     width: 150px;
     height: 20px;
@@ -88,25 +90,65 @@ div.sheet-tab2
     background-color: ;
 }
 /*-----textbox-----*/
-.sheet-textbox {
-    background:transparent;
-    border-top:none;
-    border-left:none;
-    border-right:none;
-    border-bottom: 1px solid black;
+.charsheet .sheet-textbox[type="text"] {
+    border:none;
     box-shadow:none;
     width:100%;
+	height:20px;
+	font-size:20px;
+    padding-top:0px;
+    padding-left:5px;
+    padding-right:0px;
+    padding-bottom: 0px;
+	margin:0px;
+    font-family:Caveat;
+    background: rgba(255,255,192,0.45);
 }
 
-.sheet-textbox[type="number"] {
-    text-align:center;
-    background:transparent;
-    border-top:none;
-    border-left:none;
-    border-right:none;
-    border-bottom: 1px solid black;
+.charsheet .sheet-textbox[type="number"] {
+    border:none;
     box-shadow:none;
     width:100%;
+    max-width:100%;
+	height:20px;
+	font-size:20px;
+    padding-top:0px;
+    padding-left:5px;
+    padding-right:0px;
+    padding-bottom: 0px;
+	margin:0px;
+    font-family:Caveat;
+    background: rgba(255,255,192,0.45);
+}
+.charsheet .sheet-textbox_2[type="number"] {
+    border:none;
+    box-shadow:none;
+    width:100%;
+    max-width:100%;
+	height:20px;
+	font-size:20px;
+    padding-top:0px;
+    padding-left:5px;
+    padding-right:0px;
+    padding-bottom: 0px;
+	margin:0px;
+    font-family:Caveat;
+    background: rgb(225,204,177,0.45);
+}
+.charsheet .sheet-width_50[type="number"] {
+    border:none;
+    box-shadow:none;
+    width:100%;
+    max-width:50px;
+	height:20px;
+	font-size:20px;
+    padding-top:0px;
+    padding-left:5px;
+    padding-right:0px;
+    padding-bottom: 0px;
+	margin:0px;
+    font-family:Caveat;
+    background: rgba(255,255,192,0.45);
 }
 
 .sheet-defense {
@@ -117,7 +159,7 @@ div.sheet-tab2
     border-right:none;
     border-bottom: none;
     box-shadow:none;
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     font-size:1.4em;
 }
 
@@ -147,7 +189,7 @@ div.sheet-tab2
     color:#13558f;
     text-shadow: 0px 0px 0.2em white;
     font-weight:700;
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     font-size:1.2em;
 }
 
@@ -164,8 +206,9 @@ div.sheet-tab2
     text-shadow: 0px 0px 0.2em red;
     color:black;
 }
-.sheet-wounds {
-    background:transparent;
+.charsheet div.sheet-grid_1 input.sheet-wounds[type="number"],
+.charsheet .sheet-wounds {
+    background: rgba(255,255,192,0.45);
     border:none;
     box-shadow:none;
     width:100%;
@@ -174,6 +217,7 @@ div.sheet-tab2
     font-weight:bold;
     text-shadow: 0px 0px 0.2em red;
     text-align:center;
+    font-family:Caveat;
 }
 .sheet-center {
     margin-left:auto; 
@@ -183,55 +227,216 @@ div.sheet-tab2
 .sheet-select {
     margin:0;
     background:transparent;
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     border:none;
     font-size:1em;
     font-weight:bold;
+	width:100%;
 }
 
-{
-    font-family:GreatVibesRegular;
-    font-size:1.2em;
+.charsheet .sheet-subtitle {
+    font-family:Parisienne;
+    text-shadow: 0px 0px 5px white, 0px 0px 5px white, 0px 0px 15px white;
+}
+.charsheet .sheet-subtitle_2 {
+    font-family:Parisienne;
+    text-shadow: none;
+	font-size:16px;
+	font-weight: bold;
+}
+.charsheet .sheet-row .sheet-subtitle span.sheet-span_20 {
+    font-size: 20px;
 }
 
 h3 {
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     font-size:1.6em;
     text-shadow: 0px 0px 0.2em white;
 }
 
 h4 {
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     font-size:1.4em;
     text-shadow: 0px 0px 0.2em white;
 }
 
 h5 {
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     font-size:1.2em;
 }
 
 td, th {
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     font-size:1.2em;
 }
 
 .sheet-textarea {
-    background: url('https://c1.staticflickr.com/3/2642/3751270375_4dba7c40e4.jpg');
+    background: rgba(255,255,192,0.65);
     background-size:100%;
     width:97%;
     resize:vertical;
 }
 /*===== tables =====*/
 .sheet-skilltable {
-    background: url('https://c1.staticflickr.com/3/2642/3751270375_4dba7c40e4.jpg');
+    background: transparent;
     background-size:100%;
-    font-family:GreatVibesRegular;
+    font-family:Parisienne;
     color:black;
     font-weight:400;
     width:75%;
 }
-
+/* Grid */
+div.sheet-grid_1 {
+  display: grid;
+  grid-template-columns: 150px 50px 50px 50px 50px 50px 50px 50px;
+  grid-template-rows: 50px 50px;
+  grid-column-gap: 5px;
+}
+div.sheet-grid_2 {
+  display: grid;
+  grid-template-columns: 550px 230px;
+  grid-column-gap: 5px;
+}
+/* Rows and Items */
+.charsheet .sheet-row {
+	height: 24px;
+	margin: 2px 0px 2px;
+}
+.charsheet .sheet-doublerow {
+	height: 48px;
+	margin: 2px 0px 2px;
+}
+.charsheet .sheet-item {
+	display: inline-block;
+	width: 100%;
+	height: 28px;
+	vertical-align: middle;
+	margin: 0 0px;
+	text-align: left;
+	padding: 3px 2px;
+}
+.charsheet .sheet-trait {
+    position: relative; 
+}
+.charsheet .sheet-item.sheet-1 {
+	width: 1px;
+}
+.charsheet .sheet-item.sheet-2 {
+	width: 2px;
+}
+.charsheet .sheet-item.sheet-5 {
+	width: 5px;
+}
+.charsheet .sheet-item.sheet-6 {
+	width: 6px;
+}
+.charsheet .sheet-item.sheet-8 {
+	width: 8px;
+}
+.charsheet .sheet-item.sheet-10 {
+	width: 10px;
+}
+.charsheet .sheet-item.sheet-14 {
+	width: 14px;
+}
+.charsheet .sheet-item.sheet-20 {
+	width: 20px;
+}
+.charsheet .sheet-item.sheet-25 {
+	width: 25px;
+}
+.charsheet .sheet-item.sheet-30 {
+	width: 30px;
+}
+.charsheet .sheet-item.sheet-40 {
+	width: 40px;
+}
+.charsheet .sheet-item.sheet-50 {
+	width: 50px;
+}
+.charsheet .sheet-item.sheet-60 {
+	width: 60px;
+}
+.charsheet .sheet-item.sheet-65 {
+	width: 65px;
+}
+.charsheet .sheet-item.sheet-70 {
+	width: 70px;
+}
+.charsheet .sheet-item.sheet-80 {
+	width: 80px;
+}
+.charsheet .sheet-item.sheet-85 {
+	width: 85px;
+}
+.charsheet .sheet-item.sheet-90 {
+	width: 90px;
+}
+.charsheet .sheet-item.sheet-100 {
+	width: 100px;
+}
+.charsheet .sheet-item.sheet-110 {
+	width: 110px;
+}
+.charsheet .sheet-item.sheet-120 {
+	width: 120px;
+}
+.charsheet .sheet-item.sheet-130 {
+	width: 130px;
+}
+.charsheet .sheet-item.sheet-140 {
+	width: 140px;
+}
+.charsheet .sheet-item.sheet-150 {
+	width: 150px;
+}
+.charsheet .sheet-item.sheet-160 {
+	width: 160px;
+}
+.charsheet .sheet-item.sheet-170 {
+	width: 170px;
+}
+.charsheet .sheet-item.sheet-180 {
+	width: 180px;
+}
+.charsheet .sheet-item.sheet-195 {
+	width: 195px;
+}
+.charsheet .sheet-item.sheet-200 {
+	width: 200px;
+}
+.charsheet .sheet-item.sheet-210 {
+	width: 210px;
+}
+.charsheet .sheet-item.sheet-220 {
+	width: 220px;
+}
+.charsheet .sheet-item.sheet-230 {
+	width: 230px;
+}
+.charsheet .sheet-item.sheet-250 {
+	width: 250px;
+}
+.charsheet .sheet-item.sheet-300 {
+	width: 300px;
+}
+.charsheet .sheet-item.sheet-395 {
+	width: 395px;
+}
+.charsheet .sheet-item.sheet-400 {
+	width: 400px;
+}
+.sheet-real {
+	width: auto;
+}
+.charsheet .sheet-long {
+	width: 300px;
+}
+.charsheet .sheet-row label {
+	font-size:18px;
+	font-weight:900;
+	text-align:left;
+}
 /* ======== Sheet-arrow to hide things========*/
 input.sheet-arrow[type="checkbox"] {
     opacity: 0;
@@ -308,20 +513,12 @@ input.sheet-defense-toggle[type="radio"] + span::before {
     -webkit-box-shadow: 0 0 2px #ccc;
     box-shadow: 0 0 2px #ccc;
     
-    background: #f6f6f6;
-    background: -moz-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -webkit-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -ms-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -o-radial-gradient(#f6f6f6, #dfdfdf);
-    background: radial-gradient(#f6f6f6, #dfdfdf);
+    background: rgba(255,255,192,0.45);
     
     color:blue;
     content: "";
     width: 12px;
     height: 12px;
-    font-size: 0.7em;
-
-    background-size:10%;
     
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
@@ -329,7 +526,7 @@ input.sheet-defense-toggle[type="radio"] + span::before {
 }
 
 input.sheet-defense-toggle[type="radio"]:checked + span::before {
-    content: "•";
+    background: black;
 
 }
 /*-----radio boxes-----*/
@@ -364,18 +561,11 @@ input.sheet-normal[type="radio"] + span::before
     -webkit-box-shadow: 0 0 2px #ccc;
     box-shadow: 0 0 2px #ccc;
     
-    background: #f6f6f6;
-    background: -moz-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -webkit-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -ms-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -o-radial-gradient(#f6f6f6, #dfdfdf);
-    background: radial-gradient(#f6f6f6, #dfdfdf);
+    background: black;
     
-    color:black;
-    content: "•";
+    content: "";
     width: 12px;
     height: 12px;
-    font-size: 1em;
 
     background-size:10%;
     
@@ -392,7 +582,7 @@ input.sheet-skill[type="radio"] + span::before {
 /* -----Remove dot from all radios _after_ selected one----- */
 input.sheet-normal[type="radio"]:checked ~ input.sheet-normal[type="radio"] + span::before
 {    
-    content: "";
+    background: rgba(255,255,192,0.45);
 }
 
 /*------------empty traits-----------*/
@@ -468,13 +658,47 @@ input.sheet-meleecheck[type="checkbox"]:checked + span::before
     content: "✓";
 }
 
-@font-face {
-    font-family: 'GreatVibesRegular'; 
-    src: url('http://openfontlibrary.org/assets/fonts/rebecca/d32a4d9e4887fccf9ce200538290cd10/53e7427de4aaa693950c7a9c35de80e2/GreatVibesRegular.otf');
-    font-weight: normal; 
-    font-style: normal;
+/*==========radio==========*/
+/*  Yes No  */
+/*-------Start of sheet-Query-----------*/
+div.sheet-Query {
+	position: relative;
+	left: 0px;
+	top: 5px;
+	width: 30px;
+	height: 20px;
+	margin-left: 0px;
 }
-/*==========buttons=====|=====*/
+input.sheet-Query {
+	width: 30px;
+	height: 20px;
+	position: absolute;
+	left:0px;
+	top:0px;
+	z-index: 1;
+	opacity: 0;
+}
+span.sheet-Query {
+	margin: 0px 0 0 0px;
+	display: none;
+	position: absolute;
+	left:0px;
+	top:0px;
+	width:30px;
+	text-align:center;
+    font-family: "Parisienne";
+	text-shadow:0px 0px 5px white;
+}
+input.sheet-no {
+	z-index: 2;
+}
+input.sheet-no:checked + input.sheet-yes,input.sheet-yes:checked + input.sheet-no {
+	z-index: 3;
+}
+input.sheet-no:checked ~ span.sheet-no,input.sheet-yes:checked ~ span.sheet-yes {
+	display: inline-block;
+}
+/*==========buttons==========*/
     /*=====traits=====*/
 
 .sheet-trait_roll[type="roll"]:before {
@@ -512,7 +736,7 @@ input.sheet-meleecheck[type="checkbox"]:checked + span::before
     -webkit-box-sizing: border-box;
     
     font-weight: 700;
-    font-family: "GreatVibesRegular";
+    font-family: "Parisienne";
 }
 
 .sheet-trait_roll[type="roll"]:hover {
@@ -558,7 +782,7 @@ input.sheet-meleecheck[type="checkbox"]:checked + span::before
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     
-    font-family: "GreatVibesRegular";
+    font-family: "Parisienne";
     font-size:0.7em;
 }
 
@@ -575,138 +799,6 @@ input.sheet-meleecheck[type="checkbox"]:checked + span::before
     width:150px;
     height:45px;
 }
-
-/*==========feat number button==========*/
-
-div.sheet-actiondie {
-    width: 110px;
-    height: 30px;
-    position: relative;
-}
-
-input.sheet-actiondie {
-    margin: 6px 0 0 5px;
-    opacity: 0;
-    width: 45px;
-    height: 45px;
-    position: absolute;
-    z-index: 1;
-}
-
-span.sheet-actiondie {
-    margin: 10px 0 0 20px;
-    display: none;
-}
-
-input.sheet-tendie { z-index: 2; }
-
-input.sheet-zerodie:checked + input.sheet-tendie, 
-input.sheet-tendie:checked + input.sheet-ninedie,
-input.sheet-ninedie:checked + input.sheet-eightdie,
-input.sheet-eightdie:checked + input.sheet-sevendie,
-input.sheet-sevendie:checked + input.sheet-sixdie,
-input.sheet-sixdie:checked + input.sheet-fivedie,
-input.sheet-fivedie:checked + input.sheet-fourdie,  
-input.sheet-fourdie:checked + input.sheet-threedie,  
-input.sheet-threedie:checked + input.sheet-twodie,  
-input.sheet-twodie:checked + input.sheet-onedie,  
-input.sheet-onedie:checked + input.sheet-zerodie,  
-{ 
-    z-index: 3;
-}
-
-input.sheet-zerodie:checked ~ span.sheet-zerodie,
-input.sheet-onedie:checked ~ span.sheet-onedie,
-input.sheet-twodie:checked ~ span.sheet-twodie,
-input.sheet-threedie:checked ~ span.sheet-threedie,
-input.sheet-fourdie:checked ~ span.sheet-fourdie,
-input.sheet-fivedie:checked ~ span.sheet-fivedie,
-input.sheet-sixdie:checked ~ span.sheet-sixdie,
-input.sheet-sevendie:checked ~ span.sheet-sevendie, 
-input.sheet-eightdie:checked ~ span.sheet-eightdie, 
-input.sheet-ninedie:checked ~ span.sheet-ninedie, 
-input.sheet-tendie:checked ~ span.sheet-tendie, 
-{ 
-    display: inline-block; 
-}
-
-.sheet-tendie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068225-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m00-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-onedie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068226-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m01-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-twodie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068227-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m02-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-threedie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068228-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m03-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-fourdie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068229-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m04-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-fivedie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068230-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m05-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-sixdie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068231-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m06-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-sevendie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068232-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m07-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-eightdie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068233-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m08-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-ninedie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/abstract-red-and-gold-paint-splatter-icons-alphanumeric/068234-abstract-red-and-gold-paint-splatter-icon-alphanumeric-m09-clear.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
-.sheet-zerodie {
-    width: 55px;
-    height: 55px;
-    background: url("http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/abstract-red-and-gold-paint-splatter-icons-media/002603-abstract-red-and-gold-paint-splatter-icon-media-a-media36-delete.png") no-repeat 0 0;
-    background-size: 100%;
-}
-
 /*=====Tooltips =====*/
 .sheet-tooltips {
   position: relative;
@@ -764,11 +856,11 @@ input.sheet-tendie:checked ~ span.sheet-tendie,
     color: black;
     font-size: 1em;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
-    background: url('http://www.stbernardakron.org/wp-content/uploads/2013/03/Parchment-42.jpg');
+    background:url(http://i.imgur.com/BLb0XMU.jpg) top left repeat;
 }
 
 .sheet-rolltemplate-Initiative th {
-    font-family: 'GreatVibesRegular'; 
+    font-family: 'Parisienne'; 
     font-size: 2em;
     font-weight:700;
     line-height:2em;
