move stuff around, fix primary weapons, add skills, add program buttons

--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -1030,7 +1030,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-matrix div.sheet-commlinks div.repitem .sheet-con-hex {
       grid-column: 1 / 5; }
   .sheet-pc div.sheet-matrix div.sheet-programs div.repitem {
-    grid-template-columns: 1em 1fr 1.5em 1em 1em; }
+    grid-template-columns: 1em 1fr 1.5em 1em; }
     .sheet-pc div.sheet-matrix div.sheet-programs div.repitem label[data-i18n-title='notes'],
     .sheet-pc div.sheet-matrix div.sheet-programs div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-matrix div.sheet-programs div.repitem div.sheet-collapse {
@@ -1066,12 +1066,28 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input[name='attr_program_on'] + span {
         grid-area: 1 / 1 / 1 / 1; }
   .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings {
-    grid-column: 1 / 5; }
+    grid-column: 1 / 6; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings div.sheet-col:nth-of-type(1) {
+      grid-column: 1 / 4; }
+      .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings div.sheet-col:nth-of-type(1) > label {
+        width: 100%; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings div.sheet-col:nth-of-type(2) {
+      grid-column: 4 / 6;
+      text-align: center; }
+      .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings div.sheet-col:nth-of-type(2) > label {
+        width: 3em; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings div.sheet-col:nth-of-type(3) {
+      grid-area: 2 / 1 / 2 / 3; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings div.sheet-col:nth-of-type(4) {
+      grid-area: 2 / 3 / 2 / 4; }
+    .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings div.sheet-col:nth-of-type(5) {
+      grid-column: 4 / 6;
+      text-align: center; }
+      .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings div.sheet-col:nth-of-type(5) > label {
+        width: 3em; }
     .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings input[type='text'] {
       grid-column: 1 / 4;
       text-align: left; }
-    .sheet-pc div.sheet-matrix div.sheet-programs div.sheet-settings label {
-      grid-column: 1 / 4; }
   .sheet-pc div.sheet-matrix div.sheet-complex-forms div.sheet-headers {
     display: grid;
     grid-template-columns: 30% 1fr 1fr 4em 1em 1em; }
