--- a/Shadowrun4thEdition/Shadowrun4thEdition.scss
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.scss
@@ -743,7 +743,7 @@
       }
 
 			div.sheet-programs {
-				$programGrid: 1em 1fr 1.5em 1em 1em;
+				$programGrid: 1em 1fr 1.5em 1em;
 
 				div.repitem {
 					grid-template-columns: $programGrid;
@@ -769,15 +769,48 @@
 				}
 
 				div.sheet-settings { 
-					grid-column: 1 / 5;
+					grid-column: 1 / 6;
+
+          div.sheet-col {
+            &:nth-of-type(1) {
+              grid-column: 1 / 4;
+
+              & > label {
+                width: 100%;
+              }
+            }
+
+            &:nth-of-type(2) {
+              grid-column: 4 / 6;
+              text-align: center;
+
+              & > label {
+                width: 3em;
+              }
+            }
+
+            //Select row
+            &:nth-of-type(3) {
+              grid-area: 2 / 1 / 2 / 3;
+            }
+
+            &:nth-of-type(4) {
+              grid-area: 2 / 3 / 2 / 4;
+            }
+
+            &:nth-of-type(5) {
+              grid-column: 4 / 6;
+              text-align: center;
+
+              & > label {
+                width: 3em;
+              }
+            }
+          }
 
 					input[type='text'] {
 						grid-column: 1 / 4;
 						text-align: left; 
-					}
-
-					label {
-						grid-column: 1 / 4;
 					}
 				}
 			}
@@ -805,7 +838,6 @@
 					div.sheet-settings { 
 						grid-column: 1 / 7;
 						grid-template-columns: $complexFormsGrid;
-
 					}
 				}
 			}
