add spec to programs

--- a/Shadowrun4thEdition/Shadowrun4thEdition.scss
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.scss
@@ -879,6 +879,7 @@
         div.sheet-headers {
           display: grid;
           grid-template-columns: $contactsGrid;
+          grid-column-gap: 1%;
           width: 100%;
         }
 
