--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -1166,6 +1166,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc div.sheet-social div.sheet-contacts div.sheet-headers {
     display: grid;
     grid-template-columns: 1fr 4em 5.5em 4em 1.5em 1em 1em;
+    grid-column-gap: 1%;
     width: 100%; }
   .sheet-pc div.sheet-social div.sheet-contacts div.repitem {
     grid-template-columns: 1fr 4em 5.5em 4em 1.5em 1em 1em; }
