save shadowrun progress

--- a/Shadowrun4thEdition/Shadowrun4thEdition.css
+++ b/Shadowrun4thEdition/Shadowrun4thEdition.css
@@ -284,31 +284,6 @@ input:checked + .sheet-slider:before {
   text-align: center;
   width: 20px; }
 
-/***** GENERIC STYLES *****/
-/*:+:+:+: MATRIX DEVICE :+:+:+:*/
-div.sheet-matrix-device button[name*='Attack']:hover {
-  color: #cc0701; }
-div.sheet-matrix-device button[name*='Sleaze']:hover {
-  color: #007bfc; }
-div.sheet-matrix-device button[name*='Data']:hover {
-  color: #88dd04; }
-div.sheet-matrix-device button[name*='Firewall']:hover {
-  color: #f88703; }
-div.sheet-matrix-device input[type='radio'] {
-  position: relative;
-  opacity: 0;
-  z-index: 2; }
-  div.sheet-matrix-device input[type='radio'] + span {
-    position: relative; }
-div.sheet-matrix-device .sheet-matrixAttack {
-  box-shadow: 0px 0px 29px 8px  #cc0701; }
-div.sheet-matrix-device .sheet-matrixSleaze {
-  box-shadow: 0px 0px 29px 8px  #007bfc; }
-div.sheet-matrix-device .sheet-matrixData {
-  box-shadow: 0px 0px 29px 8px  #88dd04; }
-div.sheet-matrix-device .sheet-matrixFirewall {
-  box-shadow: 0px 0px 29px 8px  #f88703; }
-
 /***************************************************************************************/
 /************************** START OF THE PC SHEET *************************************/
 /*************************************************************************************/
@@ -2429,9 +2404,7 @@ input[name='attr_weapon_range'][value='melee'] ~ div.sheet-settings h2[data-i18n
 input[name='attr_weapon_range'][value='melee'] ~ div.sheet-settings label[data-i18n-title='modes'],
 input[name='attr_weapon_range'][value='melee'] ~ div.sheet-settings label[data-i18n-title='recoil'],
 input[name='attr_weapon_range'][value='melee'] ~ div.sheet-settings label[data-i18n-title='ammo'],
-input[name='attr_weapon_range'][value='melee'] ~ div.sheet-settings span, input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='combat'],
-input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='dam'],
-input[name='attr_category']:not([value='Combat']) ~ select[name='attr_combat_type'],
+input[name='attr_weapon_range'][value='melee'] ~ div.sheet-settings span, input[name='attr_category']:not([value='Combat']) ~ select[name='attr_combat_type'],
 input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam'] {
   display: none; }
 
@@ -2484,6 +2457,10 @@ input.sheet-collapse-flag:checked ~ div.sheet-collapse {
 /* SHOW AND HIDE MAGIC AND RESONANCE SPECIFIC ATTRIBUTES BASED ON RADIO TOGGLE */
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body div.sheet-grunt.sheet-pain-tolerance {
   display: none; }
+
+input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='combat'],
+input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='dam'] {
+  visibility: hidden; }
 
 .sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
   background-color: #afd3e2;
