--- a/Shadowrun4thEdition/src/pug/_npc.pug
+++ b/Shadowrun4thEdition/src/pug/_npc.pug
@@ -1,6 +1,6 @@
 .npc
 	.tabs
-		img(alt='Shadowrun black and metallic logo' src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/ShadowrunLogo.png')
+		img(alt='Shadowrun black and metallic logo' src=`${imageSource}/ShadowrunLogo.png`)
 		h2(data-i18n-title='/w GM') /w GM
 		label.switch(data-i18n-title='whisper rolls to gm' title='whisper rolls to gm')
 			input.whisper-toggle(name='attr_gm_toggle' type='checkbox' value='/w gm')
@@ -242,34 +242,6 @@
 						label.full-row(data-i18n-title='specialization' title='specialization') 
 							input(name='attr_specialization' placeholder='Specalizations' title=`@{repeating_${key}`+'_${x}_specialization}' type='text')
 
-		//- SPRITE ACTIVE SKILLS
-		.rows.sprite.repeating.inline-repeating
-			h1(data-i18n='skills') skills
-			fieldset(class='repeating_active')
-				input.toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
-				span.pictos x
-				//- SKILL BUTTON
-				+spriteButton('skill', 'attr_display_skill')
-				.settings
-					h2.full-row(data-i18n='skill') Skill
-					select.skill-select(name='attr_skill' title=`@{repeating_active`+'_${x}_skill}')
-						include ../html/skillsselectsprite.html
-
-		//- SPRITE POWERS
-		.rows.sprite.repeating.inline-repeating
-			h1(data-i18n='powers') Powers
-			fieldset(class='repeating_powers')
-				input.toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
-				span.pictos x
-				+spriteButton('power', 'attr_power')
-				.settings
-					h2.full-row(data-i18n='power') power
-					label.full-row(data-i18n-title='power' title='power')
-						input(name='attr_power' placeholder='power' title='@{repeating_powers_${x}_power}' type='text' )
-					h2.full-row(data-i18n='notes') Notes
-					label.full-row(data-i18n-title='notes' title='notes')
-						textarea(name='attr_notes' placeholder='Powers notes' title='@{repeating_powers_${x}_notes}' value='')
-
 		//- WEAPONS
 		.rows.grunt.vehicle.repeating.weapons
 			h1(data-i18n='weapons') Weapons
@@ -364,33 +336,5 @@
 							label(data-i18n-title=translationKey title=key)
 								input(name=`attr_${attrName}` placeholder=val['placeholder'] title='@{repeating_form_${x}_'+`${attrName}}` type=val['type'])
 
-		//- IC
-		.rows.host.repeating.ic
-			h1(data-i18n='intrusioncountermeasures') Intrusion Countermeasures
-			fieldset(class='repeating_IC')
-				input(name='attr_flag' title='Settings toggle' type='checkbox' checked)
-				span.pictos x
-				input(name='attr_IC' type='hidden' value='')
-				+displayRollButton(icButton, false)
-				span(name='attr_IC')
-				.settings
-					each val, key in icObject
-						- const translationKey = key.toLowerCase();
-						if (key !== 'Notes')
-							h2(data-i18n=translationKey) #{key}
-					each val, key in icObject
-						- const translationKey = key.toLowerCase();
-						- const attrName = key === 'IC Limit' ? 'limit' : key === 'Defense Attribute' ? 'attribute' : key === 'Defense Matrix Attribute' ? 'matrix' : key === 'Notes' ? 'note' : key.toLowerCase();
-						if val['type'] === 'select'
-							select(name='attr_IC_'+attrName title='@{repeating_IC_${x}_'+`${attrName}}` value=val['default'])
-								each type in val['array']
-									- const i18n = type === 'Data Processing' ? 'data_processing' : type.toLowerCase();
-									- const value = type;
-									if val['default'] === i18n
-										option(data-i18n=i18n value=value 'selected') #{i18n}
-									else
-										option(data-i18n=i18n value=value) #{i18n}
-						else
-							label(data-i18n-title=translationKey title=key)
-								input(name='attr_IC_'+attrName placeholder=val['placeholder'] title='@{repeating_IC_${x}_'+`${attrName}}` type=val['type'])
+
 
