--- a/Shadowrun4thEdition/src/scss/_hide.scss
+++ b/Shadowrun4thEdition/src/scss/_hide.scss
@@ -195,7 +195,10 @@
 
 	//- NPC SPELLS HIDE COMBAT INFO IF NOT A COMBAT SPELL
 	input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='combat'],
-	input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='dam'],
+	input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='dam'] {
+    visibility: hidden;
+  }
+
 	input[name='attr_category']:not([value='Combat']) ~ select[name='attr_combat_type'],
 	input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam']  {
 		@extend %display-none;
